--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.pool-brush {
+    position: relative;
+    background: #0D5077;
+    width: 100px;
+    height: 20px;
+    margin: 100px auto;
+    animation: scrub 1s ease-in-out infinite;
+  }
+  
+  .pool-brush::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background: #61acef;
+  }
+  
+  @keyframes scrub {
+    0% { transform: translateX(-20px); }
+    50% { transform: translateX(20px); }
+    100% { transform: translateX(-20px); }
+  }
